--- a/myfirstmap/views/index.ejs
+++ b/myfirstmap/views/index.ejs
@@ -7,7 +7,7 @@
     <title>Corona Tracker</title>
     <link rel="stylesheet" href="/stylesheets/style.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId="></script>
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=k9c9rid7y5"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <!-- Custom styles for this template-->
     <link href="stylesheets/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -26,23 +26,26 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
-                </div>
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-text mx-3">OSS_PROJECT</div>
             </a>
+
 
             <!-- Divider -->
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.ejs">
+                <a class="nav-link">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>COVID-19 Tracker
+                    <span><h6>COVID-19 Tracker</h6>
+                       코로나 현황을 전국별, 지역별 집계로 보여주고<br>
+                       코로나 검사를 위한 선별 진료소 현황을 보여줍니다.<br><br>
+                       <h6>만든이</h6>
+                       안유성<br>
+                       이주연<br>
+                       박영서<br>
 
-                     <!--씨발 된다~~~~~-->
                      </span></a>
             </li>
         </ul>
@@ -61,6 +64,15 @@
                     </div>
                     <hr class="sidebar-divider my-4">
                     <!-- Content Row -->
+                    <div class="row">
+                        <div class="col-lg-6 mb-4">
+                            <div class="card shadow mb-4" style="width:200%;">
+                                <div class="card-header py-3">
+                                    <h6 class="m-0 font-weight-bold text-primary">총 확진자 수(누적)</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="row">
 
                         <!-- Earnings (Monthly) Card Example -->
@@ -132,13 +144,13 @@
                     <!-- Content Row -->
                     <!-- Content Row -->
                     <div class="row">
-                        <div class="col-lg-6 mb-4">
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                        <div class="col-lg-6 mb-4" >
+                            <div class="card shadow mb-4"style="width:200%;">
+                                <div class="card-header py-3" >
                                     <h6 class="m-0 font-weight-bold text-primary">선별진료소 map</h6>
                                 </div>
                                 <!--<div id="navbar">선별진료소 map</div>-->
-                                <div class="card-body">
+                                <div class="card-body" >
                                     <div id="infoBox">
                                         <div id="infoTitle">현재날짜</div>
                                         <div id="infoContent">2020.07.10</div>
@@ -149,47 +161,36 @@
                             </div>
                         </div>
                        <!-- Content Column -->
+                </div>
+                <!--지역별 확진자 수 카드 만들기-->
+                <div class="row">
                         <div class="col-lg-6 mb-4">
-                            <!-- Project Card Example -->
-                            <div class="card shadow mb-4">
+                            <div class="card shadow mb-4" style="width:200%;">
                                 <div class="card-header py-3">
                                     <h6 class="m-0 font-weight-bold text-primary">지역별 확진자 수(누적)</h6>
                                 </div>
-                                <div class="card-body">
-                                    <h4 class="small font-weight-bold">서울<span
-                                            class="float-right"><%= title_s %></span></h4>
-                                    <div class="progress mb-4">
-                                        <div class="progress-bar bg-danger" role="progressbar" style="width: 100%"
-                                            aria-valuenow="10" aria-valuemin="0" aria-valuemax="0"></div>
-                                    </div>
-                                    <h4 class="small font-weight-bold">부산<span
-                                            class="float-right">40%</span></h4>
-                                    <div class="progress mb-4">
-                                        <div class="progress-bar bg-warning" role="progressbar" style="width: 40%"
-                                            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                    <h4 class="small font-weight-bold">대구<span
-                                            class="float-right">60%</span></h4>
-                                    <div class="progress mb-4">
-                                        <div class="progress-bar" role="progressbar" style="width: 60%"
-                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                    <h4 class="small font-weight-bold">인천<span
-                                            class="float-right">70%</span></h4>
-                                    <div class="progress mb-4">
-                                        <div class="progress-bar bg-info" role="progressbar" style="width: 70%"
-                                            aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                    <h4 class="small font-weight-bold">광주<span
-                                            class="float-right">Complete!</span></h4>
-                                    <div class="progress">
-                                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%"
-                                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
+                            </div>
+                        </div>
+                </div>
+                <div class="row">
+                      <% for(var i=0; i<cities.length;i++){ %>
+                      <div style="width: 50%;">
+                      <div class="col-lg-6 mb-4">
+                            <div class="card shadow mb-4">
+                                <div class="card-header py-3" >
+                                    <h6 class="m-0 font-weight-bold text-primary"><%= cities[i] %></h6>
+                                </div>
+                                <!--<div id="navbar">선별진료소 map</div>-->
+                                <div class="card-body" >
+                                            확진자 수: <%= inform_cities[i][0].replace(/["]+/g, "") %> 명<br>
+                                            사망 수: <%= inform_cities[i][1].replace(/["]+/g, "") %> 명<br>
+                                            완치자 수: <%= inform_cities[i][2].replace(/["]+/g, "") %> 명<br>
+                                            치료 중: <%= inform_cities[i][3].replace(/["]+/g, "") %> 명<br>
                                 </div>
                             </div>
-
-                    </div>
+                      </div>
+                      </div>
+                      <% } %>
                 </div>
                 <!-- /.container-fluid -->
 
