--- a/myfirstmap/views/index.ejs
+++ b/myfirstmap/views/index.ejs
@@ -182,10 +182,10 @@
                                 </div>
                                 <!--<div id="navbar">선별진료소 map</div>-->
                                 <div class="card-body" >
-                                            확진자 수: <%= inform_cities[i][0].replace(/["]+/g, "") %> 명<br>
-                                            사망 수: <%= inform_cities[i][1].replace(/["]+/g, "") %> 명<br>
-                                            완치자 수: <%= inform_cities[i][2].replace(/["]+/g, "") %> 명<br>
-                                            치료 중: <%= inform_cities[i][3].replace(/["]+/g, "") %> 명<br>
+                                            확진자 수: <%= inform_cities[i][0].replace(/["]+/g , " ") %> 명<br>
+                                            사망 수: <%= inform_cities[i][1] %> 명<br>
+                                            완치자 수: <%= inform_cities[i][2] %> 명<br>
+                                            치료 중: <%= inform_cities[i][3] %> 명<br>
                                 </div>
                             </div>
                       </div>
